<resources>
    <string name="app_name">Nac1</string>
    <string name="todo">TODO</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>
    <string name="buscar_cep">Buscar CEP</string>
    <string name="salvar_contato">Salvar Contato</string>
    <string name="e_mail">E-Mail</string>
    <string name="nome">Nome</string>
    <string name="celular">Celular</string>
    <string name="cep">CEP</string>
    <string name="logradouro">Logradouro</string>
    <string name="bairro">Bairro</string>
</resources>
